kompose/pgadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yaml
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: pgadmin
  name: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pgadmin
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yaml
        kompose.version: 1.36.0 (ae2a39403)
      labels:
        io.kompose.service: pgadmin
    spec:
      containers:
        - env:
            - name: PGADMIN_CONFIG_ENHANCED_COOKIE_PROTECTION
              value: "False"
            - name: PGADMIN_CONFIG_WTF_CSRF_CHECK_DEFAULT
              value: "False"
            - name: PGADMIN_DEFAULT_EMAIL
              value: joelwembo@outlook.com
            - name: PGADMIN_DEFAULT_PASSWORD
              value: postgres
          image: dpage/pgadmin4
          name: pgadmin
          ports:
            - containerPort: 80
              protocol: TCP
      restartPolicy: Always
